# fanlin-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  fanlin-container.json  fanlin.json
.github/workflows/: release.yaml  test.yaml
src/: config.rs  content.rs  handler.rs  infra.rs  main.rs  query.rs
src/config/: mod.rs  s3.rs  web.rs
src/infra/: file.rs  mod.rs  s3.rs  web.rs
