[package]
name = "fanlin-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.1", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.69.0"
axum = "0.8.1"
chrono = "0.4.39"
image = "0.25.5"
reqwest = "0.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["timeout"] }
