[package]
name = "fanlin-rs"
version = "0.0.1"
edition = "2021"
authors = ["Livesense Inc."]
license-file = "LICENSE"

[dependencies]
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.69.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
