[package]
name = "fanlin-rs"
version = "0.8.3"
edition = "2021"
authors = ["Livesense Inc."]
license-file = "LICENSE"

[dependencies]
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.74"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
matchit = "0.8"
percent-encoding = "2.3"
reqwest = { version = "0.12", features = ["hickory-dns"] }
usvg = { version = "0.44", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-server-timing-header = "0.1"
tokio = { version = "1.43", features = ["full"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
webp = "0.3"

[dev-dependencies]
tower-http = { version = "0.6", features = ["timeout", "trace", "fs"] }

[profile.container]
inherits = "release"
strip = true
